--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
